# newsletter_server

./: Cargo.toml  README.md
migrations/: 20250325171031_create_subscriptions_tabl.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  mod.rs  subsctiptions.rs
tests/: health_check.rs
