[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Alireza Jalouli <billypushr@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4.10.2"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
# Using table-like toml syntax to avoid a super-long line!

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
"runtime-actix-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]
