[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Alireza Jalouli <billypushr@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4.10.2"
chrono = "0.4.40"
config = "0.15.11"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

